# novel_scraper

./: Cargo.toml  README.md  flake.nix  novel.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3iz2bd4yj32jls8wmgr5gixn1a5n43nl-source
src/: lib.rs  main.rs
src/client/: http_client.rs
src/epub/: epub.rs  mod.rs
src/errors/: error.rs
src/models/: chapter.rs  exclude.rs  mod.rs  novel.rs
src/scraper/: mod.rs  runner.rs  scraper_client.rs
