[package]
name = "novel_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version= "0.12", features = ["socks"] }
crowbook = { version = "0.15.2", default-features = false }
serde_json = "1.0.133"
html-escape = "0.2.13"
scraper = "0.20.0"
regex = "1.11.1"
